syntax = "proto3";

package userpb;

option go_package = "/userpb;userpb";

service UserService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}